--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-    "botToken": "OTkzMTA0NjQzNjMyNjc2ODc0.GJJIQh.zmhfcNnsc1t6FjmiIDYLewwXIFQzmHULrY2GMw",
-    "logs_channel_id": "993556999973384322",
+    "botToken": "MTAwNjYyNDYzMDE3OTY0NzU4OA.GmzHVv.DT5R1yoP6wyqT9MZTTcO0FrArnqEe-pfBji304",
+    "logs_channel_id": "1006626554358530188",
 
     "prefix": "*",
     "command_name": "start",
     
-    "give_role": false,
-    "role_name": "ROLE-NAME-HERE",
+    "give_role": true,
+    "role_name": "naujas",
 
-    "mass_dm": 3,
-    "message": "https://discord.gg/dusky "
+    "mass_dm": false,
+    "message": ""
 }
