--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "botToken": "MTAwNjYyNDYzMDE3OTY0NzU4OA.GmzHVv.DT5R1yoP6wyqT9MZTTcO0FrArnqEe-pfBji304",
+    "botToken": ",
     "logs_channel_id": "1006626554358530188",
 
     "prefix": "*",
